Fixing extra space between the responsive icon and the input values caused by the icon's height.

--- a/assets/dev/scss/editor/panel/_controls.scss
+++ b/assets/dev/scss/editor/panel/_controls.scss
@@ -375,8 +375,9 @@ $item-size: 2em;
 	--pointer-position: var(--selected-option);
 
 	position: relative;
+	top: calc(-0.25 * #{$item-size});
 	width: $item-size;
-	height: $item-size;
+	height: calc(0.5 * #{$item-size});
 
 	&__holder {
 		position: absolute;
